Fixed some spacing and simplified the language for file selection

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,3 +23,7 @@ html, body {
 [x-cloak] {
     display: none !important;
 }
+
+.file-cta, file-label {
+    white-space: normal;
+}
